--- a/src/components/ApplyForm.css
+++ b/src/components/ApplyForm.css
@@ -123,7 +123,7 @@
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  background-color: rgba(168, 85, 247, 0.05);
+  background-color: #93909444;
   top: -150px;
   left: -150px;
   z-index: 0;
@@ -135,7 +135,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background-color: rgba(168, 85, 247, 0.05);
+  background-color: #93909444;
   bottom: -100px;
   right: -100px;
   z-index: 0;
