- navbar fixed - icons for loans changed - added google reviews - created new lenders/partners - footer fixed - improved color scheme - added and improved steps secctions

--- a/src/components/ApplyForm.css
+++ b/src/components/ApplyForm.css
@@ -1,7 +1,7 @@
 /* ApplyForm Component Styles */
 
 .apply-form-section {
-  background-color: #f9f7fe;
+  /* background-color: #f9f7fe; */
   position: relative;
   overflow: hidden;
 }
