--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html {
+  scroll-behavior: smooth;
+}
 body {
   /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   
   /* font-family: "Poppins", sans-serif;  */
   font-family: "Outfit", sans-serif;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
 }
 
 @layer base {
@@ -83,7 +86,7 @@ body {
 }
 
 .hero-section {
-  background-image: url("./components/assets/Hero-background-Image.avif");
+  background-image: url("./components/assets/hero-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -96,7 +99,7 @@ body {
   }
 
   .hand-bg {
-    background-size: 140vw !important;
+    background-size: 100% !important;
   }
 
   .sm-d-none {
@@ -135,12 +138,15 @@ body {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .steps-badge{
     display: none;
   }
   .steps-border{
     border-right-width: 0px;
+  }
+  .process-arrow{
+    display: none;
   }
 }
 
