--- a/src/components/ApplyForm.css
+++ b/src/components/ApplyForm.css
@@ -35,13 +35,13 @@
 .apply-form-card {
   background-color: white;
   border-radius: 24px;
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+  /* box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08); */
   transition: all 0.3s ease;
   position: relative;
 }
 
 .apply-form-card:hover {
-  box-shadow: 0 15px 35px rgba(160, 119, 234, 0.15);
+  box-shadow: 0 15px 35px rgba(160, 119, 234, 0.7);
   transform: translateY(-5px);
 }
 
