--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -243,7 +243,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1230px;
-    padding: 40px 15px 1050px;
+    padding: 40px 15px 65px;
     position: relative;
   }
 }
@@ -252,7 +252,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1230px;
-    padding: 40px 15px 1050px;
+    padding: 40px 15px 30px;
     position: relative;
   }
 }
@@ -261,10 +261,16 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1230px;
-    padding: 40px 15px 1050px;
+    padding: 40px 15px 30px;
     position: relative;
   }
 }
+
+@media (max-width: 760px) {
+    .footer-content-column {
+      float: none;
+    }
+  }
 @media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
 
 }
