--- a/src/components/WhyLoveFloatMe.css
+++ b/src/components/WhyLoveFloatMe.css
@@ -95,6 +95,16 @@
     transform: translate(0, -10px) scale(1.05);
   }
 }
+.why-love-cards{
+  flex-direction: column !important;
+}
+.why-love-steps{
+  width: 100%;
+}
+.why-love-cards--parent{
+  display: flex;
+  justify-content: center;
+}
 
 /* Responsive Adjustments */
 @media (max-width: 767px) {
